Structure, basic security features added.

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ Flask-SQLAlchemy>=3.1.1
 email-validator>=2.2.0
 markdown>=3.6
 gunicorn>=22.0.0
+feedparser>=6.0.11
+beautifulsoup4>=4.12.3
+requests>=2.32.3
